--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* CUSTOM PROPS */
 :root {
-  --header-text-color: #000;
   --text-color: #333;
+  --accent-color: #0a775f;
 }
 /* GLOBAL */
 html {
@@ -11,7 +11,7 @@ html {
 }
 
 *:focus {
-  outline: 2px dotted #0a775f;
+  outline: 2px dotted var(--accent-color);
   outline-offset: 2px;
 }
 
@@ -43,9 +43,9 @@ img {
 /* CONTAINER */
 .container {
   width: 100%;
-  max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1440px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -54,4 +54,91 @@ img {
 /* MAIN-CONTENT */
 .main-content {
   flex-grow: 1;
+}
+
+/* HEADER-HERO */
+
+.site-header-hero-wrapper {
+
+  background-image: url("../img/header-bg.jpg");
+}
+
+.site-header {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.site-header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.site-header-logo-link {
+  display: flex;
+  text-decoration: none;
+}
+
+.site-header-logo-link:hover {
+  opacity: 0.8;
+}
+
+.site-header-logo-img {
+  width: 235px;
+  height: 24px;
+  object-fit: contain;
+}
+
+.sitenav-list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.sitenav-item:not(:last-child) {
+  margin-right: 40px;
+}
+
+.sitenav-item-link {
+  display: block;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 1px;
+  color: var(--text-color);
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.sitenav-item-link:hover {
+  color: var(--accent-color);
+  text-decoration: underline;
+}
+.sitenav-item-link:active {
+  opacity: 0.7;
+}
+
+
+
+
+
+
+
+
+
+
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+  .site-header-hero-wrapper {
+    background-image: url("../img/header-bg@2x.jpg");
+  }
 }
