--- a/css/styles.css
+++ b/css/styles.css
@@ -286,24 +286,21 @@ img {
 /* INDEX-FEATURES */
 .index-features {
   margin-top: 0;
-  margin-bottom: 80px;
 }
 
 .index-features-inner {
-  height: 700px;
-  background-color: var(--accent-color-brown);
+  padding: 50px 30px;
   background-image: url("../img/brown-bg.jpg");
   background-size: 100% 700px;
   background-repeat: no-repeat;
 }
 
 .index-features-heading {
-  text-align: center;
-  padding-top: 50px;
   margin-top: 0;
   margin-bottom: 10px;
   font-size: 50px;
   line-height: normal;
+  text-align: center;
   text-transform: uppercase;
   color: var(--text-color-white);
 }
@@ -321,25 +318,26 @@ img {
 
 .index-features-list {
   display: flex;
-  padding-left: 30px;
-  padding-right: 30px;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-left: -20px;
+  list-style: none;
 }
 
 .index-features-item {
-  flex-direction: column;
-  width: 435px;
-  margin-bottom: 80px;
-  list-style: none;
-}
-.index-features-item:not(:last-child) {
-  margin-right: 20px;
+  width: calc(100% / 3 - 20px);
+  margin-left: 20px;
+  margin-bottom: 30px;
 }
 
 .index-features-img {
   display: flex;
-  width: 433px;
-  height: 500px;
   margin-bottom: 28px;
+  width: 433px;
+  max-width: 100%;
+  height: 500px;
+  object-fit: cover;
 }
 
 .index-features-item-title {
@@ -347,7 +345,8 @@ img {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 30px;
-  line-height: 35px;
+  line-height: normal;
+  text-transform: uppercase;
   color: var(--text-color);
 }
 
